// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should display image if one is provided 1`] = `
<div
  className="sc-bxivhb dgxkrU"
>
  <span
    className="sc-bdVaJa jmnRGq"
  >
    Does this test pass?
  </span>
  <span
    className="sc-bwzfXH bXamfX"
  >
    Select an option
  </span>
  <div>
    <label
      className="sc-ifAKCX irKPnh"
    >
      <input
        checked={false}
        className="sc-EHOje koflXw"
        type="radio"
        value="yes"
      />
      <span
        className="sc-bZQynM ldmnhp"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="sc-ifAKCX irKPnh"
    >
      <input
        checked={false}
        className="sc-EHOje koflXw"
        type="radio"
        value="no"
      />
      <span
        className="sc-bZQynM ldmnhp"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the default snapshot 1`] = `
<div
  className="sc-bxivhb hwZAGr"
>
  <span
    className="sc-bdVaJa jmnRGq"
  >
    Does this test pass?
  </span>
  <div>
    <label
      className="sc-ifAKCX irKPnh"
    >
      <input
        checked={false}
        className="sc-EHOje koflXw"
        type="radio"
        value="yes"
      />
      <span
        className="sc-bZQynM ldmnhp"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="sc-ifAKCX irKPnh"
    >
      <input
        checked={false}
        className="sc-EHOje koflXw"
        type="radio"
        value="no"
      />
      <span
        className="sc-bZQynM ldmnhp"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with hint text snapshot 1`] = `
<div
  className="sc-bxivhb hwZAGr"
>
  <span
    className="sc-bdVaJa jmnRGq"
  >
    Does this test pass?
  </span>
  <span
    className="sc-htpNat cFrViK"
  >
    Supporting text to help
  </span>
  <div>
    <label
      className="sc-ifAKCX irKPnh"
    >
      <input
        checked={false}
        className="sc-EHOje koflXw"
        type="radio"
        value="yes"
      />
      <span
        className="sc-bZQynM ldmnhp"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="sc-ifAKCX irKPnh"
    >
      <input
        checked={false}
        className="sc-EHOje koflXw"
        type="radio"
        value="no"
      />
      <span
        className="sc-bZQynM ldmnhp"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with meta and error snapshot 1`] = `
<div
  className="sc-bxivhb dgxkrU"
>
  <span
    className="sc-bdVaJa jmnRGq"
  >
    Does this test pass?
  </span>
  <span
    className="sc-bwzfXH bXamfX"
  >
    Select an option
  </span>
  <div>
    <label
      className="sc-ifAKCX irKPnh"
    >
      <input
        checked={false}
        className="sc-EHOje koflXw"
        type="radio"
        value="yes"
      />
      <span
        className="sc-bZQynM ldmnhp"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="sc-ifAKCX irKPnh"
    >
      <input
        checked={false}
        className="sc-EHOje koflXw"
        type="radio"
        value="no"
      />
      <span
        className="sc-bZQynM ldmnhp"
      >
        No
      </span>
    </label>
  </div>
</div>
`;
